--- a/src/CSS/RTC.css
+++ b/src/CSS/RTC.css
@@ -1,25 +1,57 @@
 .rtc-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .video-container {
-    position: relative;
-    display: inline-block;
-  }
-  
-  .rtc-video {
-    width: 640px;
-    height: 480px;
-  }
-  
-  .selection-canvas {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 640px;
-    height: 480px;
-    pointer-events: none;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.video-container {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; /* 16:9 비율 */
+}
+
+.rtc-video, .selection-canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.top-buttons {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.top-buttons button {
+  margin: 10px;
+  padding: 15px 30px;
+  background-color: #5a71af;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+body, html {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+#root {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
