--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,23 @@
     transform: rotate(360deg);
   }
 }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* 전체 화면 높이 설정 */
+  width: 100vw; /* 전체 화면 너비 설정 */
+  overflow: hidden; /* 불필요한 스크롤 바 제거 */
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  overflow-y: auto; /* 필요에 따라 스크롤 허용 */
+}
