--- a/src/CSS/Header.css
+++ b/src/CSS/Header.css
@@ -1,5 +1,3 @@
-/* Header.css */
-
 .header-container {
   display: flex;
   justify-content: space-between; /* 로고와 버튼 사이에 공간을 넓힘 */
@@ -12,6 +10,15 @@
 
 .logo {
   margin-left: 0.5em; /* 로고의 좌측 여백 */
+  width: 50px; /* 원하는 너비 설정 */
+  height: auto; /* 비율을 유지하며 높이 자동 설정 */
+  filter: contrast(150%) brightness(90%);
+}
+
+h2 {
+  margin: 0;
+  margin-left: 10px; /* 로고와 h2 사이의 간격 */
+  font-size: 1.5rem; /* 원하는 폰트 크기로 설정 */
 }
 
 .button-container {
@@ -19,7 +26,7 @@
   align-items: center;
 }
 
-.button {
+.GuideBtn,.LogBtn {
   margin: 5px;
   font-size: 16px; /* 버튼 글자 크기 */
   height: 30px; /* 버튼 높이 */
@@ -29,7 +36,7 @@
   cursor: pointer; /* 마우스 오버 시 커서 모양 변경 */
 }
 
-.button:hover {
+.GuideBtn:hover,.LogBtn:hover,.APIBtn:hover {
   background-color: #5272b8;
   color: rgb(255, 255, 255);
   animation-duration: 1s;
@@ -60,14 +67,13 @@
 .input.active {
   background-color: #ffffff;
 }
+
 .input-container {
   display: flex;
   flex-direction: column;
   align-items: flex-end; /* 오른쪽 정렬 */
   flex: 1; /* 나머지 공간을 차지하도록 설정 */
 }
-
-
 
 .input-label {
   display: block;
@@ -77,7 +83,6 @@
 }
 
 .input {
-
   padding: 5px;
   width: 200px;
   border: 1px solid #ccc;
@@ -97,10 +102,12 @@
   border-right: 0;
   border-bottom: 3px solid;
 }
+
 .input:disabled {
   background-color: #e9ecef;
   cursor: not-allowed;
 }
+
 .APIBtn {
   margin: 5px;
   font-size: 16px; /* 버튼 글자 크기 */
