--- a/src/CSS/LegionRaid.css
+++ b/src/CSS/LegionRaid.css
@@ -80,6 +80,8 @@
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
+  background-color: white;
+  border-radius: 9px;
 }
 
 .checkbox-container {
@@ -87,6 +89,10 @@
   align-items: center;
 }
 
+.checkbox-container :hover{
+  border : none;
+  outline: none;
+}
 .checkbox-container input {
   display: none;
 }
@@ -105,6 +111,7 @@
 }
 
 .checkbox-container input:checked + label {
-  background-color: #846315;
+  background-color: rgba(17, 138, 132, 0.616);
   color: white;
+  border : none;
 }
