--- a/src/CSS/LegionRaid.css
+++ b/src/CSS/LegionRaid.css
@@ -15,29 +15,24 @@
 
 .tab-menu button {
   background-color: #fff;
-  border: 2px solid #5a71af; /* 버튼 테두리 추가 */
-  border-radius: 8px; /* 버튼 모서리 둥글게 */
-  padding: 10px 20px; /* 패딩 증가 */
+  border: 2px solid #5a71af;
+  border-radius: 8px;
+  padding: 10px 20px;
   cursor: pointer;
   font-weight: bold;
-  font-size: 18px; /* 글자 크기 증가 */
+  font-size: 18px;
   margin: 5px;
-  transition: background-color 0.3s, color 0.3s; /* 부드러운 색상 전환 */
+  transition: background-color 0.3s, color 0.3s;
 }
 
 .tab-menu button img {
   width: 50px;
   height: 50px;
   display: block;
-  margin: 0 auto 5px; /* 가운데 정렬 */
+  margin: 0 auto 5px;
 }
 
-.tab-menu button.active {
-  background-color: #5a71af;
-  color: white;
-}
-
-/* 호버 효과 추가 */
+.tab-menu button.active,
 .tab-menu button:hover {
   background-color: #5a71af;
   color: white;
@@ -89,10 +84,11 @@
   align-items: center;
 }
 
-.checkbox-container :hover{
-  border : none;
+.checkbox-container:hover {
+  border: none;
   outline: none;
 }
+
 .checkbox-container input {
   display: none;
 }
@@ -103,15 +99,237 @@
   height: 2.25rem;
   cursor: pointer;
   background-color: #f2f4f6;
-  font-size: 0.875rem; /* 글자 크기 증가 */
+  font-size: 0.875rem;
   color: #383838;
-  border: 2px solid #5a71af; /* 테두리 추가 */
-  border-radius: 8px; /* 모서리 둥글게 */
+  border: 2px solid #5a71af;
+  border-radius: 8px;
   text-align: center;
 }
 
 .checkbox-container input:checked + label {
   background-color: rgba(17, 138, 132, 0.616);
   color: white;
-  border : none;
+  border: none;
+}
+
+/* 프리셋 메뉴 */
+.preset-menu {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 20px;
+}
+
+.preset-menu button {
+  margin-left: 10px;
+  padding: 10px 20px;
+  border: 2px solid #5a71af;
+  background-color: #fff;
+  color: #5a71af;
+  font-size: 16px;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.preset-menu button:hover {
+  background-color: #5a71af;
+  color: white;
+}
+
+/* 프리셋 옵션 */
+.preset-dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.preset-options {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  background-color: white;
+  border: 2px solid #5a71af;
+  border-radius: 8px;
+  margin-top: 10px;
+  z-index: 1;
+}
+
+.preset-options button {
+  padding: 10px 20px;
+  background-color: #fff;
+  color: #5a71af;
+  border: none;
+  font-size: 16px;
+  text-align: left;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.preset-options button:hover {
+  background-color: #5a71af;
+  color: white;
+}
+
+/* 모달 오버레이 저장 */
+.modal-overlay-save {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+/* 모달 콘텐츠 저장 */
+.save-modal {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  width: 300px;
+  height: 150px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.save-modal input {
+  width: calc(100% - 20px);
+  padding: 10px;
+  font-size: 16px;
+  margin-bottom: 20px;
+  border: 2px solid #5a71af;
+  border-radius: 8px;
+}
+
+.save-modal button {
+  padding: 10px 20px;
+  margin: 5px;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.save-modal button:first-of-type {
+  background-color: #5a71af;
+  color: white;
+}
+
+.save-modal button:first-of-type:hover {
+  background-color: #3e4a74;
+}
+
+.save-modal button:last-of-type {
+  background-color: #d9534f;
+  color: white;
+}
+
+.save-modal button:last-of-type:hover {
+  background-color: #b52e2b;
+}
+
+/* 프리셋 불러오기 모달 스타일 */
+.modal-overlay-reloading {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+/* 모달 콘텐츠 */
+.modal-content.load-modal {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  width: 60%;
+  max-width: 500px;
+  height: 60%;
+  overflow-y: auto;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-content h2 {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.preset-list {
+  flex: 1;
+  overflow-y: auto;
+  margin-bottom: 20px;
+}
+
+.preset-list div {
+  font-size: 20px;
+  padding: 10px;
+  cursor: pointer;
+  border-bottom: 1px solid #ccc;
+  transition: background-color 0.3s;
+}
+
+.preset-list div:hover {
+  background-color: #f0f0f0;
+}
+
+.modal-content.load-modal .preset-actions {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.modal-content.load-modal .preset-actions button {
+  margin-left: 10px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.modal-content.load-modal .preset-actions button:first-of-type,
+.preset-actions button:first-of-type {
+  background-color: #5a71af;
+  color: white;
+}
+
+.modal-content.load-modal .preset-actions button:first-of-type:hover,
+.preset-actions button:first-of-type:hover {
+  background-color: #3e4a74;
+}
+
+.modal-content.load-modal .preset-actions button:nth-of-type(2),
+.preset-actions button:nth-of-type(2) {
+  background-color: #d9534f;
+  color: white;
+}
+
+.modal-content.load-modal .preset-actions button:nth-of-type(2):hover,
+.preset-actions button:nth-of-type(2):hover {
+  background-color: #b52e2b;
+}
+
+.modal-content.load-modal .preset-actions button:last-of-type,
+.preset-actions button:last-of-type {
+  background-color: #ccc;
+  color: black;
+}
+
+.modal-content.load-modal .preset-actions button:last-of-type:hover,
+.preset-actions button:last-of-type:hover {
+  background-color: #aaa;
+}
+
+.preset-actions button:disabled {
+  background-color: #ccc;
+  color: #777;
+  cursor: not-allowed;
 }
