--- a/src/CSS/Header.css
+++ b/src/CSS/Header.css
@@ -1,6 +1,6 @@
+/* Header.css */
 .header-container {
   display: flex;
-  justify-content: space-between; /* 로고와 버튼 사이에 공간을 넓힘 */
   align-items: center; /* 세로 중앙 정렬 */
   background-color: #5a71af; /* 배경색 */
   color: #fff; /* 글자색 */
@@ -17,16 +17,17 @@
 
 h2 {
   margin: 0;
-  margin-left: 10px; /* 로고와 h2 사이의 간격 */
+  margin-left: 5px; /* 로고와 h2 사이의 간격 줄임 */
   font-size: 1.5rem; /* 원하는 폰트 크기로 설정 */
 }
 
 .button-container {
   display: flex;
   align-items: center;
+  margin-left: auto; /* 왼쪽 여백을 자동으로 채워 버튼을 우측으로 정렬 */
 }
 
-.GuideBtn,.LogBtn {
+.GuideBtn, .LogBtn, .APIBtn {
   margin: 5px;
   font-size: 16px; /* 버튼 글자 크기 */
   height: 30px; /* 버튼 높이 */
@@ -36,7 +37,7 @@ h2 {
   cursor: pointer; /* 마우스 오버 시 커서 모양 변경 */
 }
 
-.GuideBtn:hover,.LogBtn:hover,.APIBtn:hover {
+.GuideBtn:hover, .LogBtn:hover, .APIBtn:hover {
   background-color: #5272b8;
   color: rgb(255, 255, 255);
   animation-duration: 1s;
@@ -106,14 +107,4 @@ h2 {
 .input:disabled {
   background-color: #e9ecef;
   cursor: not-allowed;
-}
-
-.APIBtn {
-  margin: 5px;
-  font-size: 16px; /* 버튼 글자 크기 */
-  height: 30px; /* 버튼 높이 */
-  background-color: #5a71af; /* 버튼 배경색 */
-  color: white; /* 버튼 글자색 */
-  border: none; /* 버튼 테두리 없음 */
-  cursor: pointer; /* 마우스 오버 시 커서 모양 변경 */
 }
