--- a/src/CSS/RaidStyles.css
+++ b/src/CSS/RaidStyles.css
@@ -109,7 +109,33 @@
   .checkbox-container input:checked + label {
     background-color: rgba(17, 138, 132, 0.616);
     color: white;
-    border: none;
+    border: 2px solid #5a71af;
+  }
+
+  checkbox-container input.disabled-checkbox + label {
+    color: gray;/* 비활성화된 상태의 기본 테두리 */
+    border: 2px solid #ccc; 
+  }
+
+  .checkbox-container input.disabled-checkbox:checked + label {
+    background-color: rgba(17, 138, 132, 0.2);
+    color: gray;
+    border: 2px solid #ccc;
+  }
+
+  .checkbox-container input.disabled + label {
+    background-color: rgba(17, 138, 132, 0.2);
+    color: gray;
+    border: 2px solid #ccc;
+  }
+
+  .spec-card.disabled {
+    position: relative;
+    pointer-events: none; /* 클릭 불가능하게 만듦 */
+  }
+  
+  .spec-card.disabled .checkbox-container {
+    opacity: 0.6; /* 투명도 조절 */
   }
   
   /* 프리셋 메뉴 */
@@ -340,7 +366,7 @@
     width: 150x;
     height: 25px;
     background-color: #ccc;
-    border-radius: 25px;
+    border-radius: 50px;
     cursor: pointer;
     display: inline-block;
     margin-right: 10px;
@@ -374,3 +400,17 @@
     background-color: #66bb6a;
   }
   
+  .spec-card.disabled .checkbox-container {
+    opacity: 0.6; /* 투명도 조절 */
+  }
+  
+  .spec-card.disabled::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.7); /* 하얀색 오버레이 */
+    pointer-events: none; /* 클릭 불가능하게 만듦 */
+  }
