--- a/src/CSS/Body.css
+++ b/src/CSS/Body.css
@@ -1,31 +1,36 @@
 .body-container {
   display: flex;
-  flex-direction: row; /* 입력 영역과 RTC 영역을 가로로 정렬 */
-  justify-content: space-between; /* 공간을 균등하게 배분 */
+  flex-direction: row; /* Arrange items in a row */
+  justify-content: space-between; /* Space items evenly */
   padding: 20px;
-  height: 100vh; /* 전체 화면 높이 */
-  box-sizing: border-box; /* 패딩과 보더를 포함한 박스 크기 설정 */
-}
-
-.rtc-wrapper, .party-wrapper {
-  border: 1px solid #ccc;
-  padding: 3px;
-  box-sizing: border-box; /* 패딩과 보더를 포함한 박스 크기 설정 */
-  display: flex;
-  flex-direction: column;
-  justify-content: center; /* 세로 중앙 정렬 */
-  align-items: center; /* 가로 중앙 정렬 */
-  margin: 10px; /* 요소 간의 간격 설정 */
+  height: 70vh; /* Full viewport height */
+  box-sizing: border-box; /* Include padding and border in the element's total width and height */
 }
 
 .rtc-wrapper {
-  width: calc(50% - 20px); /* 너비를 50%로 설정하고 여백을 고려하여 조정 */
-  height: 70%; /* 전체 높이의 50%를 차지 */
+  border: 1px solid #ccc;
+  padding: 3px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; /* Center items vertically */
+  align-items: center; /* Center items horizontally */
+  margin: 10px;
+  width: 30%; /* Adjust width for the RTC section */
+  height: 100%; /* Full height of the container */
 }
 
 .party-wrapper {
-  width: calc(50% - 20px); /* 너비를 50%로 설정하고 여백을 고려하여 조정 */
-  height: 70%; /* 전체 높이의 50%를 차지 */
+  border: 1px solid #ccc;
+  padding: 3px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; /* Center items vertically */
+  align-items: center; /* Center items horizontally */
+  margin: 10px;
+  width: 70%; /* Adjust width for the Party section */
+  height: 100%; /* Full height of the container */
 }
 
 .rtc-container {
@@ -39,6 +44,12 @@
 .rtc-video {
   width: 100%;
   height: 100%;
-  object-fit: contain; /* 비디오 크기 조절 */
+  object-fit: contain; /* Scale video to fit */
   border: 1px solid #000;
+}
+
+.party-container {
+  width: 100%;
+  height: 100%;
+  overflow-y: auto; /* Enable scrolling for overflow content */
 }
