--- a/src/CSS/Header.css
+++ b/src/CSS/Header.css
@@ -21,13 +21,24 @@ h2 {
   font-size: 1.5rem; /* 원하는 폰트 크기로 설정 */
 }
 
+.GuideBtn {
+  margin-top: 10px;
+  font-size: 16px; /* 버튼 글자 크기 */
+  height: 30px; /* 버튼 높이 */
+  background-color: #5a71af; /* 버튼 배경색 */
+  color: white; /* 버튼 글자색 */
+  border: none; /* 버튼 테두리 없음 */
+  cursor: pointer; /* 마우스 오버 시 커서 모양 변경 */
+  text-decoration-line: none;
+}
+
 .button-container {
   display: flex;
   align-items: center;
   margin-left: auto; /* 왼쪽 여백을 자동으로 채워 버튼을 우측으로 정렬 */
 }
 
-.GuideBtn, .LogBtn, .APIBtn {
+.LogBtn, .APIBtn {
   margin: 5px;
   font-size: 16px; /* 버튼 글자 크기 */
   height: 30px; /* 버튼 높이 */
